--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
     "tailwindcss": "^4",
-    "typescript": "^5"
-  }
+    "typescript": "^5",
+    "nx": "22.0.3"
+  },
+  "nx": {}
 }
