nx package.json

--- a/nx.json
+++ b/nx.json
@@ -1,3 +1,4 @@
 {
-  "$schema": "./node_modules/nx/schemas/nx-schema.json"
+  "$schema": "./node_modules/nx/schemas/nx-schema.json",
+  "nxCloudId": "69178a372b063e7f6fe423cc"
 }
