--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "next": "16.0.3",
+    "next-auth": "^4.24.13",
     "react": "19.2.0",
     "react-dom": "19.2.0"
   },
@@ -20,9 +21,9 @@
     "@types/react-dom": "^19",
     "eslint": "^9",
     "eslint-config-next": "16.0.3",
+    "nx": "22.0.3",
     "tailwindcss": "^4",
-    "typescript": "^5",
-    "nx": "22.0.3"
+    "typescript": "^5"
   },
   "nx": {}
 }
